Thirty-second commit, added LOGOUT type, action and reducer and ensured UI changes when the user logs out, token is removed and links to appropriate links function properly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -488,6 +488,12 @@ button {
   margin-bottom: 0.5rem;
 }
 
+@media (max-with: 1200px) {
+  .hide-sm {
+    display: none;
+  }
+}
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .container {
@@ -495,6 +501,10 @@ button {
   }
 
   .hide-sm {
+    display: none;
+  }
+
+  .hide {
     display: none;
   }
 
