--- a/client/src/App.css
+++ b/client/src/App.css
@@ -139,6 +139,21 @@ img {
   outline: none;
 }
 
+.btn_delete_account {
+  display: flex;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.4rem 1.3rem;
+  font-size: 1rem;
+  width: 10rem;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+}
+
 .badge {
   font-size: 0.8rem;
   padding: 0.1rem;
